# nats-wrapper

./: Cargo.toml  build.rs
proto/: test.proto
src/: error_info.rs  lib.rs  meta_keys.rs  reason.rs  reply.rs  status.rs  subject.rs
src/reply/: error_info.rs  mod.rs  reason.rs  response.rs  response_tests.rs  status.rs
src/request/: converter.rs  converter_tests.rs  mod.rs  nats_request.rs  nats_request_tests.rs
src/server/: error.rs  mod.rs  nats_server.rs  nats_server_tests.rs  serde.rs  server_traits.rs
src/server/receiver/: mod.rs  nats_receiver.rs  nats_receiver_tests.rs  subscribe.rs
src/server/serde/: json.rs  json_tests.rs  prost.rs  prost_tests.rs
