[package]
name = "response-wrapper"
version = "0.1.0"
edition = "2021"
readme = "README.md"
publish = false

[dependencies]
# anyhow = "1.0.71"
# thiserror = "1.0.30"

# NATS 
#async-nats = "0.29.0"
#futures = "0.3.28" 
#bytes = "1.4.0"


# Serialisation/Deserialisation:
serde = { version = "1.0.163", features = ["derive"] }

# gRPC
prost = "0.11.0"
tonic = { version = "0.9.2" }    

# Misc
#uuid = { version = "1.3.3", features = ["v4", "serde"] }


