[package]
name = "nats-wrapper"
version = "0.1.0"
edition = "2021"
readme = "README.md"
publish = false

[dependencies]
chat-proto = { git = "https://github.com/RuntivaOrg/chat-proto.git" }



thiserror = "1.0.30"
anyhow = "1.0.71"

# Async Runtime:
tokio = { version = "1.28.2", features = ["full"] }
tokio-stream = { version = "0.1.14" }
async-trait = "0.1.52"

# NATS 
async-nats = "=0.29.0"
#async-nats = { git = "https://github.com/RuntivaOrg/nats.rs.git" }

futures = "0.3.28" 
bytes = "1.4.0"

# Serialisation/Deserialisation:
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"

# gRPC
prost = "0.11.0"
tonic = { version = "0.9.2" }    

# Misc
uuid = { version = "1.3.3", features = ["v4", "serde"] }


[build-dependencies]
tonic-build = { version = "0.9.2", features = ["prost"] }

